level2-4 removeFirst 메서드 구현 -> results에 담긴 값중 가장 먼저 담긴 값을 삭제한다.